--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
     width: 100%;
     /*height: 20px;*/
     background: lightskyblue;
+    /* padding: 20px;
+    position: absolute;
+    top: 0;
+    left: 0; */
 }
 
 h1 {
@@ -32,7 +36,24 @@ h1 {
     background: lightskyblue;
 }
 
+input[type=text] {
+    border: none;
+    outline: none;
+    width: 80%;
+    
+}
+
+#first-task-text::placeholder {
+    opacity: 1;
+    color: black;
+}
+
+input[type=text]:focus {
+    border-bottom: 2px solid cornflowerblue;
+}
+
 #new-todo-box {
+    width: 50%;
     border: none;
     border-bottom: 2px solid cornflowerblue;
     transition: 0.5s;
@@ -58,4 +79,21 @@ h1 {
     cursor: not-allowed;
 }
 
+.general-button {
+    background-color: transparent; /* Green */
+    border: none;
+    color: black;
+    margin: 0 20px;
+    padding: 8px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+
+    border: 2px solid midnightblue;
+}
+
+.disabled{
+    opacity: 0.6;
+}
 
