--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@
     left: 0; */
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
     color: midnightblue;
     /*text-decoration: underline;*/
