--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ body {
   color: white;
 }
 
+/* html {
+  background-color: black;
+  color: white;
+} */
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
