--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -1,6 +1,6 @@
 #dropdown-basic-button {
     background-color: #1565c0;
-    padding: 10px 15px;
+    padding: 5px 12px;
     border-radius: 5px;
     color: #fff;
     font-weight: 500;
@@ -15,6 +15,10 @@
 
 #dropdown-basic-button:hover {
     background-color: #0d47a1;
+}
+
+.drop-down-item {
+    width: 120px;
 }
 
 
